# osads

./: .gitignore  README.md  pyproject.toml  stress_test.py  train_audio.py  train_modes.py
config/: default.yaml
models/: fly_detector.pt  gnat_detector.pt  insect_audio_classifier.pt  mosquito_detector.pt
src/osads/: __init__.py  config.py  main.py
src/osads/control/: __init__.py  gimbal.py
src/osads/detection/: __init__.py  acoustic.py  auto_mode.py  fusion.py  visual.py
src/osads/simulation/: __init__.py  fake_insects.py
src/osads/tracking/: __init__.py  kalman.py  tracker.py
src/osads/training/: __init__.py  audio_model.py  binary_audio_model.py
src/osads/validation/: __init__.py  metrics.py
tests/: test_detection.py  test_tracking.py
